# Ray_tracing

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: cargo.yml
fireworks/: 烟花.prproj
fireworks/Adobe Premiere Pro Audio Previews/烟花.PRV/Peak Files/: 1502a488-cff6-4d80-b7a5-b3ca7f7f35c6+7362a80a-ede6-60db-a4f2-cde400000049 48000.pek  7f4a4243-eb2f-47c2-8fc7-2fa505cb32d2+2026d06e-18ec-1c5e-0f25-59fd00000049 48000.pek
src/: 4-4格子地面.rs  aabb.rs  camera.rs  hit.rs  main.rs  material.rs  perlin.rs  point.rs  ray.rs  rectangle.rs  scene.rs  sphere.rs  texture.rs  toys.rs  utility.rs  vec3.rs
