[package]
name = "raytracer"
version = "0.1.0"
authors = ["fangtiancheng <1773701277@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
indicatif = "0.15"
imageproc = "0.20.0"
rand = "0.3.23"
num-complex = "0.2.4"